# aria

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  graph.py  main.py  mcp_client.py  state.py
backend/app/agents/: common.py  github_agent.py  jira_agent.py  notion_agent.py  orchestrator.py  slack_agent.py
backend/evals/: EVALUATION_FRAMEWORK.md  EVALUATION_REPORT.md  METRICS.md  evaluators.py  golden_dataset.py  run_orchestrator_eval.py
docs/tech/: add-comp-store-sales-metric-to-sales-dashboard.md  add-csv-export-button-to-sales-report-page.md  add-dark-mode-toggle-to-settings-page.md  add-dealer-name-column-to-inventory-report.md  add-dealer-name-field-to-inventory-report.md  add-dealer-name-to-inventory-report.md  add-gross-margin-kpi-to-sales-dashboard.md  add-gross-margin-metric-to-inventory-dashboard.md  add-merge-button-for-duplicate-customer-profiles-in-crm.md  add-quick-reorder-button-for-past-purchases.md  add-quick-reorder-button-to-past-orders.md  add-recently-viewed-products-carousel-to-homepage.md  add-sub-category-filter-to-inventory-dashboard.md  add-time-series-analysis-to-sales-dashboard.md  add-wishlist-button-for-user-item-saving.md  bulk-deactivate-inactive-user-accounts-after-90-days.md  display-gross-margin-percentage-gm-in-sales-dashboard.md  display-individual-product-details-in-sales-report.md  display-user-profile-id-on-home-page.md  loop-timing-test-1.md  (+36 more)
frontend/: .dockerignore  Dockerfile  fly.toml  package-lock.json  package.json
(+15 files in other folders)
