[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "langchain-google-genai>=4.2.5",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-mistralai>=1.1.5",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langgraph>=1.2.5",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "websockets>=15.0.1",
]
